--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 value="0"></h1>
+        <h1 id="main">0</h1>
        <div class="row">
             <div class="col light">C</div>
             <div class="col light">DEL</div>
@@ -18,7 +18,7 @@
             <div class="col b">7</div>
             <div class="col b">8</div>
             <div class="col b">9</div>
-            <div class="col orange">X</div>
+            <div class="col orange">*</div>
         
             <div class="col b">4</div>
             <div class="col b">5</div>
@@ -32,7 +32,7 @@
         
             <div class="col b span1">0</div>
             <div class="col b">.</div>
-            <div class="col orange">=</div>
+            <div class="col green">=</div>
             <div class="col none"></div>
         </div>
     </div>
