--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="row">
             <div class="col light">C</div>
             <div class="col light">DEL</div>
-            <div class="col light">%</div>
+            <div class="col orange">%</div>
             <div class="col orange">/</div>
 
             <div class="col b">7</div>
